PyU4V Change Log
================


Version 9.1.3.0 - released 19/01/20
===================================
Replication Enhancements
-------------------------
RDF functions added
-------------------
-create_rdf_group
-modify_rdf_group
-delete_rdf_group
-get_rdf_port_connections
-get_rdf_director_port_details
-get_rdf_director_ports
-get_rdf_director
-get_rdf_director_list

BugFix
---------
update to rest_requests header parameter corrected to application-type line 54

Version 9.1.2.0 - released 19/12/19
===================================
Provisioning Enhancements
-------------------------
- add_new_volume_to_storage_group : added functionality to be able to add
  volumes to SRDF protected storage groups, new volumes will automatically be
  protected with SRDF, volumes are added to the remote storage group to fully
  automate the provisioning and simplify operations. Storage group must be
  local to the unisphere instance and only works with storage groups that
  contain R1 or R11 devices.
- remove_volume_from_storage_group enhanced to be able to automatically remove
  volumes from local and remote storage groups deleting srdf pairs as part of
  the process, no need to suspend, the automation takes care of everything,
  storage group must be local to the unisphere instance and only works with
  storage groups that contain R1 or R11 devices.

Replication Enhancements
-------------------------
- create_storage_group_snapshot added secure option to enable creation of
  secure snapshot

Version 9.1.1.0 - released 12/12/19
===================================

Fixes
-----
- During Provisioning CI tests, only check storage groups for compression
  related values if compression is present and enabled.
- OpenStack migrate tool and corresponding documentation

Version 9.1.0.0 - released 4/12/19
==================================

Enhancements
------------
- Changed from MIT License to Apache 2.0 License